--- a/package.json
+++ b/package.json
@@ -2,17 +2,14 @@
   "name": "servex-thread",
   "version": "1.1.2",
   "description": "Framework-agnostic Service Worker thread abstraction system. Organize your SW code into modular threads with a clean, type-safe API.",
-  "main": "dist/index.js",
-  "module": "dist/index.mjs",
-  "types": "dist/index.d.ts",
-  "bin": {
-    "servex-thread": "./dist/cli.js"
-  },
+  "main": "dist/threads/index.js",
+  "module": "dist/threads/index.mjs",
+  "types": "dist/threads/index.d.ts",
   "exports": {
     ".": {
-      "types": "./dist/index.d.ts",
-      "require": "./dist/index.js",
-      "import": "./dist/index.mjs"
+      "types": "./dist/threads/index.d.ts",
+      "require": "./dist/threads/index.js",
+      "import": "./dist/threads/index.mjs"
     },
     "./vite": {
       "types": "./dist/plugins/vite.d.ts",
