--- a/package.json
+++ b/package.json
@@ -71,10 +71,9 @@
   ],
   "author": "",
   "license": "MIT",
-  "dependencies": {
-    "esbuild": "^0.19.0"
-  },
+  "dependencies": {},
   "devDependencies": {
+    "esbuild": "^0.19.0",
     "@types/node": "^20.10.0",
     "@types/webpack": "^5.28.5",
     "rollup": "^4.52.4",
@@ -83,11 +82,15 @@
     "vite": "^7.1.10"
   },
   "peerDependencies": {
+    "esbuild": ">=0.19.0",
     "rollup": ">=3.0.0",
     "vite": ">=4.0.0",
     "webpack": ">=5.0.0"
   },
   "peerDependenciesMeta": {
+    "esbuild": {
+      "optional": true
+    },
     "vite": {
       "optional": true
     },
