--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "main": "dist/threads/index.js",
   "module": "dist/threads/index.mjs",
   "types": "dist/threads/index.d.ts",
+  "bin": {
+    "servex-thread": "./dist/cli.js"
+  },
   "exports": {
     ".": {
       "types": "./dist/threads/index.d.ts",
@@ -54,6 +57,7 @@
   },
   "scripts": {
     "build": "tsup",
+    "postbuild": "chmod +x dist/cli.js",
     "dev": "tsup --watch",
     "prepublishOnly": "npm run build"
   },
@@ -83,7 +87,6 @@
   },
   "peerDependencies": {
     "esbuild": ">=0.19.0",
-    "rollup": ">=3.0.0",
     "vite": ">=4.0.0",
     "webpack": ">=5.0.0"
   },
@@ -95,9 +98,6 @@
       "optional": true
     },
     "webpack": {
-      "optional": true
-    },
-    "rollup": {
       "optional": true
     }
   },
