--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "servex-thread",
+  "name": "remedy-thread",
   "version": "2.0.1",
   "description": "Framework-agnostic Service Worker thread abstraction system. Organize your SW code into modular threads with a clean, type-safe API.",
+  "private": true,
   "main": "dist/threads/index.js",
   "module": "dist/threads/index.mjs",
   "types": "dist/threads/index.d.ts",
   "bin": {
-    "servex-thread": "./dist/cli.js"
+    "remedy-thread": "./dist/cli.js"
   },
   "exports": {
     ".": {
